css: avoid hover menu being overlapped

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -370,6 +370,7 @@ div.action-bar > ul ul {
 
 div.action-bar > ul > li:hover ul {
   display: block;
+  z-index: 2;
 }
 div.action-bar > ul > li > a {
   padding: 0.2em 0.5em;
